--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,8 +3,9 @@ kind: Ingress
 metadata:
   name: hotel
   namespace: hotel-dev
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx-service
   rules:
   - host: localhost
     http:
@@ -14,5 +15,25 @@ spec:
         backend:
           service:
             name: hotelfrontend
+            port:
+              number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: dashboard
+  namespace: kubernetes-dashboard
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - host: k8sdash.localhost
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kubernetes-dashboard
             port:
               number: 80
