--- a/tools/ingress.yaml
+++ b/tools/ingress.yaml
@@ -14,9 +14,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: grafana
+            name: grafanaservice
             port:
-              number: 80
+              number: 3000
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
