--- a/tools/service.yaml
+++ b/tools/service.yaml
@@ -4,11 +4,11 @@ metadata:
   annotations:
   labels:
     app: grafana
-  name: garafana
+  name: garafanaservice
   namespace: devops-tools
 spec:
   selector:
     name: grafana
   ports:
-  - port: 80
+  - port: 3000
     targetPort: 3000
