--- a/ingress.yaml
+++ b/ingress.yaml
@@ -17,3 +17,13 @@ spec:
             name: hotelfrontend
             port:
               number: 80
+  - host: hotelapi.localhost
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: hotelapi
+            port:
+              number: 8000
