--- a/deployment-hotelapi.yaml
+++ b/deployment-hotelapi.yaml
@@ -18,6 +18,10 @@ spec:
       containers:
       - name: 'hotelapi'
         image: 'maayanpeleg87/hotel-api:latest'
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
         ports:
         - containerPort: 8000
         env:
