--- a/prometheus/prom.yaml
+++ b/prometheus/prom.yaml
@@ -19,3 +19,10 @@ spec:
         image: 'prom/prometheus:v2.26.0'
         ports:
         - containerPort: 9090
+        volumeMounts:
+        - name: prometheus-config
+          mountPath: /etc/prometheus/prometheus.yml
+      volumes:
+      - name: prometheus-config
+        configMap:
+          name: prometheus-config
