--- a/hotel/deployment-hotelfrontend.yaml
+++ b/hotel/deployment-hotelfrontend.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         name: hotelfrontend
+      annotations:
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '8080'
     spec:
       containers:
       - name: 'hotelfrontend'
