--- a/hotel/service.yaml
+++ b/hotel/service.yaml
@@ -12,6 +12,8 @@ spec:
   ports:
   - port: 5000
     targetPort: 5000
+  - port: 8080
+    targetPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -27,6 +29,8 @@ spec:
   ports:
   - port: 8000
     targetPort: 8000
+  - port: 8080
+    targetPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -42,3 +46,5 @@ spec:
   ports:
   - port: 3306
     targetPort: 3306
+  - port: 8080
+    targetPort: 8080
