--- a/prometheus/prom.yaml
+++ b/prometheus/prom.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         name: prometheus
     spec:
+      serviceAccountName: prometheus
       containers:
       - name: 'prometheus'
         image: 'prom/prometheus:v2.26.0'
@@ -25,4 +26,4 @@ spec:
       volumes:
       - name: prometheus-config
         configMap:
-          name: prometheus-config
+          name: prometheus-configmap
