--- a/hotel/service.yaml
+++ b/hotel/service.yaml
@@ -10,10 +10,9 @@ spec:
   selector:
     name: hotelfrontend
   ports:
-  - port: 5000
+  - name: http
+    port: 5000
     targetPort: 5000
-  - port: 8080
-    targetPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -27,10 +26,9 @@ spec:
   selector:
     name: hotelapi
   ports:
-  - port: 8000
+  - name: http
+    port: 8000
     targetPort: 8000
-  - port: 8080
-    targetPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -44,7 +42,6 @@ spec:
   selector:
     name: hoteldb
   ports:
-  - port: 3306
+  - name: http
+    port: 3306
     targetPort: 3306
-  - port: 8080
-    targetPort: 8080
