--- a/prometheus/prom-configmap.yaml
+++ b/prometheus/prom-configmap.yaml
@@ -15,5 +15,5 @@ data:
       relabel_configs:
       - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
         action: keep
-        regex: '8080'
+        regex: true
       
