--- a/prometheus/prom.yaml
+++ b/prometheus/prom.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 9090
         volumeMounts:
         - name: prometheus-config
-          mountPath: /etc/prometheus/prometheus.yml
+          mountPath: /etc/prometheus/
       volumes:
       - name: prometheus-config
         configMap:
