Split devops-tools ns to grafana ns and prometheus ns

--- a/grafana/service.yaml
+++ b/grafana/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: grafana
   name: grafanaservice
-  namespace: devops-tools
+  namespace: grafana
 spec:
   selector:
     name: grafana
