--- a/grafana/ingress.yaml
+++ b/grafana/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
-  namespace: devops-tools
+  namespace: grafana
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
