--- a/namespace-devopstools.yaml
+++ b/namespace-devopstools.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: devops-tools
+  name: grafana
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: prometheus
