--- a/prometheus/prom.yaml
+++ b/prometheus/prom.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: devops-tools
+  namespace: prometheus
   labels:
     app: prometheus
 spec:
