added livenes probes

--- a/hotel/deployment-hoteldb.yaml
+++ b/hotel/deployment-hoteldb.yaml
@@ -20,3 +20,5 @@ spec:
         image: 'maayanpeleg87/hotel-db:latest'
         ports:
         - containerPort: 3306
+        restartPolicy: Always
+
