--- a/hotel/deployment-hotelapi.yaml
+++ b/hotel/deployment-hotelapi.yaml
@@ -23,3 +23,17 @@ spec:
         env:
         - name: 'DATABASE_URL'
           value: 'hoteldb'
+        resourses:
+          liveinessProbe:
+            httpGet:
+              path: /
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          restartPolicy: Always
