--- a/hotel/deployment-hotelapi.yaml
+++ b/hotel/deployment-hotelapi.yaml
@@ -23,16 +23,15 @@ spec:
         env:
         - name: 'DATABASE_URL'
           value: 'hoteldb'
-        liveinessProbe:
-          httpGet:
-            path: /
-            port: 8000
-          initialDelaySeconds: 30
-          periodSeconds: 10
+        #liveinessProbe:
+          #httpGet:
+            #path: /
+            #port: 8000
+          #initialDelaySeconds: 30
+          #periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /
             port: 8000
           initialDelaySeconds: 30
           periodSeconds: 10
-        restartPolicy: Always
