--- a/hotel/deployment-hotelfrontend.yaml
+++ b/hotel/deployment-hotelfrontend.yaml
@@ -25,16 +25,15 @@ spec:
           value: 'hotelapi'
         - name: 'PORT'
           value: '8000'
-        liveinessProbe:
-          httpGet:
-            path: /
-            port: 5000
-          initialDelaySeconds: 30
-          periodSeconds: 10
+        #liveinessProbe:
+          #httpGet:
+            #path: /
+            #port: 5000
+          #initialDelaySeconds: 30
+          #periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /
             port: 5000
           initialDelaySeconds: 30
           periodSeconds: 10
-        restartPolicy: Always
